<resources>
    <string name="app_name">ScoreCounter</string>
    <string name="button_teamA">Button</string>
    <string name="button_teamB">Button</string>
    <string name="button1">Button1</string>
    <string name="show_countup">0</string>
    <string name="show_ennemy_count">0</string>
    <string name="ecount_up">ecount_up</string>
    <string name="countUp">countUp</string>
    <string name="teama">teamA</string>
    <string name="teamb">teamB</string>
    <string name="Show_ecount">0</string>
    <string name="ShowA_count">0</string>
    <string name="image_desc">image_desc</string>
    <string name="image_desc2">image_desc2</string>
    <string name="your_team_won_by">Your team won by:</string>
    <string name="send_msg">Send </string>
    <string name="locations">Find Location</string>
    <string name="Make_call">Call</string>
    <string name="enter_message">Enter message</string>
    <string name="search_for_location">search_for_location</string>
    <string name="search_location">Search</string>
    <string name="btn_camera">Camera</string>
    <string name="image_view_description">Image_view</string>


</resources>