<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/soccer"
    tools:context=".MainActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


    </RelativeLayout>


    <TextView
        android:id="@+id/show_count"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/ShowA_count"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/show_enemyCount"
        app:layout_constraintEnd_toStartOf="@+id/show_enemyCount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/show_enemyCount"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:text="@string/Show_ecount"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/show_count"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_weight="1"
        android:onClick="countUp"
        android:text="@string/teama"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_enemyCount"
        app:layout_constraintEnd_toStartOf="@+id/button_enemyCount"
        app:layout_constraintStart_toStartOf="parent" />


    <Button
        android:id="@+id/button_enemyCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/show_enemyCount"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:onClick="eCountUp"
        android:text="@string/teamb"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_count" />


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="93dp"
        android:layout_margin="16dp"

        android:contentDescription="@string/image_desc"
        android:src="@drawable/team_a"
        app:layout_constraintTop_toBottomOf="@+id/show_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="137dp"
        android:layout_height="93dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/image_desc2"
        android:src="@drawable/team_b"
        app:layout_constraintBottom_toTopOf="@+id/button_enemyCount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.319"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/show_enemyCount"
        app:layout_constraintVertical_bias="0.515" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
